# esrf-ontologies

./: .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  afterReasoning  beforeReasoning  catalog-v001.xml  intermediate.owl  pyproject.toml  setup.cfg  test.py  work_wdn.txt
.github/workflows/: ci.yml  release.yml  widoco.yml
doc/: api.rst  bliss.rst  conf.py  esrfet.rst  explanations.rst  howtoguides.rst  index.rst  techniques.rst
doc/_ext/: technique_table.py  techniques.json
doc/_static/: custom.css
doc/explanations/: esrfet.rst
doc/howtoguides/: bliss.rst  protege.rst
esrfet/: index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
esrfet/latest/: index.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
esrfet/latest/provenance/: provenance-en.html  provenance-en.ttl
esrfet/latest/webvowl/data/: ontology.json
esrfet/provenance/: provenance-en.html  provenance-en.ttl
esrfet/v0.1/: .htaccess
esrfet/v0.1.0/: .htaccess  index.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
esrfet/v0.1.0/provenance/: provenance-en.ttl
esrfet/v0.1.0/webvowl/data/: ontology.json
esrfet/v0.1/provenance/: provenance-en.html  provenance-en.ttl
esrfet/v0.1/webvowl/data/: ontology.json
esrfet/webvowl/data/: ontology.json
esrffair/: index.html  ontology.jsonld
esrffair/latest/: index.html  ontology.nt  ontology.owl  ontology.ttl
esrffair/latest/webvowl/data/: ontology.json
esrffair/webvowl/data/: ontology.json
excalidraw/: cascade_of_events.excalidraw  dispersive_detection.excalidraw  energy_dispersive_in_space.excalidraw  energy_dispersive_in_time.excalidraw
ontologies/: check_version.py  parse.py
ontologies/esrfet/: ESRFET.owl  ESRFET.properties
ontologies/esrfet/ESRFET-docs/: index-en.html  ontology.jsonld  ontology.nt  ontology.owl  ontology.ttl
ontologies/esrfet/wip/: interaction-result.wsd  technique-object-properties.wsd  work_wdn.txt
ontologies/esrffair/: ESRFFAIR.owl  ESRFFAIR.properties
ontologies/panet/: PaNET.owl  PaNET.properties
scripts/: generate.py
src/esrf_ontologies/db/: ESRFET.json  PaNET.json  __init__.py
src/esrf_ontologies/technique/: __init__.py  types.py
src/esrf_ontologies/tests/: test_multi_technique_metadata.py  test_ontology_versions.py  test_single_technique_metadata.py  test_techniques.py
src/esrf_ontology/: metadata.py  panet_techniques.py  techniques.py
src/esrf_ontology/db/: ESRFET.json  PaNET.json
src/esrf_ontology/ontology/: PaNET.owl  PaNET_reasoned.owl  __init__.py  catalog-v001.xml  esrf-ontology.owl  esrf-ontology.properties  esrf-ontology.rdf  esrf-ontology.ttl  esrf_example_beamline_ontology.owx  esrf_example_beamline_ontology.properties  esrf_ontology.owl  esrf_techniques.json  robot_esrf_ontology.owl  use_robot.py  xray_probe_sparql.json  xray_probe_techniques.json
src/esrf_ontology/technique/: __init__.py  panet.py  sparql_queries.py  types.py
src/esrf_ontology/tests/: test_technique_metadata.py
(+4 files in other folders)
