[build-system]
requires = ["setuptools>=46.4"]
build-backend = "setuptools.build_meta"

[project]
name = "esrf-ontology"
version = "0.1.0b0"
authors = [{name = "ESRF", email = "dau-pydev@esrf.fr"}]
description = "ESRF Ontology"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE.md"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "importlib_resources; python_version < '3.9'",
]

[project.urls]
Homepage = "https://gitlab.esrf.fr/dau/ontology/esrf-ontology/"
Documentation = "https://esrf-ontology.readthedocs.io/"
Repository = "https://gitlab.esrf.fr/dau/ontology/esrf-ontology/"
Issues = "https://gitlab.esrf.fr/dau/ontology/esrf-ontology/issues"
Changelog = "https://gitlab.esrf.fr/dau/ontology/esrf-ontology/-/blob/main/CHANGELOG.md"

[project.optional-dependencies]
test = [
    "pytest >=7",
]
dev = [
    "esrf-ontology[test]",
    "black >=22",
    "flake8 >=4",
    "owlready2",
]
doc = [
    "esrf-ontology[test]",
    "sphinx >=4.5",
    "sphinx-autodoc-typehints >=1.16",
    "pydata-sphinx-theme",
    "tabulate",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*"= ['*.json']

[tool.coverage.run]
omit = ['*/tests/*']
