[metadata]
name = esrf-ontology
version = attr: esrf_ontology.__version__
author = ESRF
author_email = wout.de_nolf@esrf.fr
description = ESRF Ontology
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://gitlab.esrf.fr/dau/ontology/esrf-ontology/
project_urls = 
    Source = https://gitlab.esrf.fr/dau/ontology/esrf-ontology/
    Documentation = https://esrf-ontology.readthedocs.io/
    Tracker = https://gitlab.esrf.fr/dau/ontology/esrf-ontology/issues/
classifiers = 
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
package_dir=
	=src
packages=find:
python_requires = >=3.6
install_requires = 
    importlib_resources; python_version < '3.9'

[options.packages.find]
where=src

[options.package_data]
* = *.json

[options.extras_require]
test =
    pytest >=7
dev =
    %(test)s
    black >=22
    flake8 >=4
    owlready2
doc =
    %(test)s
    sphinx >=4.5
    sphinx-autodoc-typehints >=1.16
    pydata-sphinx-theme < 0.15
    tabulate

# E501 (line too long) ignored for now
# E203 and W503 incompatible with black formatting (https://black.readthedocs.io/en/stable/compatible_configs.html#flake8)
[flake8]
ignore = E501, E203, W503
max-line-length = 88
exclude = 
    .eggs

# E402 (module import not at top of file) ignored
[flake8_nb]
ignore = E501, E203, W503, E402
max-line-length = 88

[coverage:run]
omit =
    setup.py
    */tests/*
